Fix mobile webapp layout and viewport handling

--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -34,7 +34,7 @@
         </form>
         <div id="candles-status" class="status"></div>
         <div id="candles-meta" class="meta"></div>
-        <canvas id="candles-canvas" width="1200" height="420"></canvas>
+        <canvas id="candles-canvas"></canvas>
       </section>
 
       <section class="card reveal" style="--delay: 0.2s">
@@ -102,7 +102,7 @@
         </div>
       </section>
     </main>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="/static/app.js"></script>
   </body>
 </html>
-
