Sync web bonds table with bot values

--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -89,11 +89,12 @@
           <table id="bonds-table">
             <thead>
               <tr>
-                <th>Тикер</th>
                 <th>Название</th>
                 <th>Погашение</th>
                 <th>Купон</th>
-                <th>Валюта</th>
+                <th>Купонная доходность</th>
+                <th>Полная доходность</th>
+                <th>Номинал</th>
                 <th>Цена</th>
               </tr>
             </thead>
