Improve futures UX and fetch full hourly candles

--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MOEX Web Console</title>
-    <link rel="stylesheet" href="/static/styles.css" />
+    <link rel="stylesheet" href="/static/styles.css?v=20260222-1" />
   </head>
   <body>
     <div class="bg-shape bg-shape-a"></div>
@@ -83,7 +83,7 @@
               <input id="bonds-years-to" type="number" min="0" max="50" value="50" />
             </label>
             <label>
-              Лимит
+              Количество облигаций для отображения
               <input id="bonds-limit" type="number" min="1" max="50" value="3" />
             </label>
             <div class="toolbar">
@@ -134,6 +134,6 @@
       </section>
     </main>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="/static/app.js?v=20260221-1"></script>
+    <script src="/static/app.js?v=20260222-1"></script>
   </body>
 </html>
